--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <div class="footer__socials">
         <ul class="footer__socials-ul">
           <li>
-            <a href="#" class="footer__socials-a">
+            <a href="#" class="footer__socials-a" aria-label="Facebook">
               <svg
                 width="20"
                 height="20"
@@ -90,7 +90,7 @@
             </a>
           </li>
           <li>
-            <a href="#" class="footer__socials-a">
+            <a href="#" class="footer__socials-a" aria-label="Instagram">
               <svg
                 width="20"
                 height="20"
@@ -104,7 +104,7 @@
             </a>
           </li>
           <li>
-            <a href="#" class="footer__socials-a">
+            <a href="#" class="footer__socials-a" aria-label="Twitter">
               <svg
                 width="20"
                 height="17"
